--- a/index.css
+++ b/index.css
@@ -28,3 +28,9 @@ h1{
     font-size: 2rem;
     font-family: 'Quicksand', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
+
+#map{
+    width: 100%;
+    height: 200px;
+}
+
