--- a/index.css
+++ b/index.css
@@ -13,24 +13,49 @@
     --primary-color: #424656;
     --secondary-color: #;
     --accent-color: #F5BA9A;
+    --heart-color: #dbd3d9;
 }
 
-
+/* Set default color, font-size, and other properties */
 html{
     color: var(--primary-color);
-    margin: 5em 5em;
-    font-size: 16px;
+    margin: 5rem 5rem;
+    font-size: 12px;
     font-family: 'Quicksand', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 
 h1{
     color: var(--accent-color);
     font-size: 2rem;
-    font-family: 'Quicksand', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    line-height: 1.7rem;
+    font-weight: bold;
 }
 
+.responsive-img{
+    height: auto;
+    width: 100%;
+    border-radius: 8px;
+}
+
+/* Set size of Google Map display*/
 #map{
     width: 100%;
     height: 200px;
 }
 
+button{
+    background: transparent;
+    height: 5rem;
+    width: 5rem;
+    color: grey;
+    border-radius: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+i{
+    font-size: 3rem;
+}
+button:hover{
+    cursor: pointer;
+}
