--- a/index.css
+++ b/index.css
@@ -1,71 +1,108 @@
 /*Import font to use for heading and regular text*/
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap");
 
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+
+/* Remove default margin, padding, and change box-sizing*/
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
+
 
 /*Color Palette*/
-:root{
-    --bkgd-color: #E4E8F7;
-    --primary-color: #424656;
-    --secondary-color: #;
-    --accent-color: #F5BA9A;
-    --heart-color: #dbd3d9;
+:root {
+  --bkgd-color: #e4e8f7;
+  --primary-color: #424656;
+  --secondary-color: #;
+  --accent-color: #f5ba9a;
+  --heart-color: #dbd3d9;
 }
+
 
 /* Set default color, font-size, and other properties */
-html{
-    color: var(--primary-color);
-    margin: 5rem 5rem;
-    font-size: 12px;
-    font-family: 'Quicksand', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+html {
+  color: var(--primary-color);
+  margin: clamp(2rem,16%,8rem);
+  font-size: 18px;
+  font-family: "Quicksand", system-ui, -apple-system, BlinkMacSystemFont,
+    "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+    sans-serif;
 }
 
-h1{
-    color: var(--accent-color);
-    font-size: 2rem;
-    line-height: 1.7rem;
-    font-weight: bold;
+
+h1 {
+  color: var(--accent-color);
+  font-size: clamp(2rem, 5vw + .5rem,5rem);
+  line-height: 1;
+  font-weight: bold;
 }
 
-.responsive-img{
-    height: auto;
-    width: 100%;
-    border-radius: 8px;
+/*Styling for the images*/
+.responsive-img {
+  height: auto;
+  width: 100%;
+  border-radius: 8px;
 }
 
 /* Set size of Google Map display*/
-#map{
-    width: 100%;
-    height: 200px;
+#map {
+  width: 100%;
+  height: 200px;
 }
 
-button{
-    background: transparent;
-    height: 5rem;
-    width: 5rem;
-    color: grey;
-    border-radius: 20px;
+
+/*Styling for buttons*/
+button {
+  background: transparent;
+  height: 5rem;
+  width: 5rem;
+  color: grey;
+  border-radius: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.btns {
     display: flex;
     align-items: center;
-    justify-content: center;
-}
-i{
-    font-size: 3rem;
-}
-a:hover, button:hover{
-    cursor: pointer;
+    justify-content: space-between;
 }
 
-@media (min-width: 720px){
-    .responsive-img{
-        width: 50%;
-    }
+#share-btns{
+    gap: 10px;
+}
 
-    figure{
-        display: flex;
+i {
+  font-size: 3rem;
+}
+
+a:hover,
+button:hover {
+  cursor: pointer;
+}
+
+
+/* Media Query to adjust format of images to 2 columns */
+@media (min-width: 720px) {
+   /*html{
+    margin: clamp(2rem,16%,8rem);
+   }*/
+
+  .responsive-img {
+    width: 50%;
+  }
+
+  figure {
+    display: flex;
+    gap: clamp(10px, 15px, 20px);
+    margin: 20px auto;
+  }
+}
+
+@media (min-width: 1000px){
+    html{
+
     }
 }
