--- a/index.css
+++ b/index.css
@@ -33,9 +33,28 @@ html {
 
 h1 {
   color: var(--accent-color);
-  font-size: clamp(2rem, 5vw + .5rem,5rem);
+  font-size: clamp(2.5rem, 5vw + .5rem,5rem);
   line-height: 1;
   font-weight: bold;
+  margin-bottom: 10px;
+}
+
+h2 {
+    font-size: clamp(1.75rem, 3vw + .5rem,3rem);
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+}
+
+#map-caption {
+    font-size: clamp(0.75rem, 1vw + .5rem,2rem);
+    margin: 5px auto;
+}
+
+#desc {
+    font-size: clamp(1rem, 1.5vw + .5rem,2.5rem);
 }
 
 /*Styling for the images*/
@@ -49,6 +68,7 @@ h1 {
 #map {
   width: 100%;
   height: 200px;
+  margin-top: 10px;
 }
 
 
