--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 /*Import font to use for heading and regular text*/
-@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Kalam:wght@300;400;700&family=Permanent+Marker&display=swap');
 
 
 /* Remove default margin, padding, and change box-sizing*/
@@ -9,52 +9,59 @@
   box-sizing: border-box;
 }
 
-
 /*Color Palette*/
 :root {
-  --bkgd-color: #e4e8f7;
-  --primary-color: #424656;
-  --secondary-color: #;
-  --accent-color: #f5ba9a;
+  --bkgd-color: #F5F5F5;
+  --primary-color: #2C3E50;
+  --secondary-color: #E74C3C;
+  --accent-color: #3498dB;
   --heart-color: #dbd3d9;
 }
 
-
 /* Set default color, font-size, and other properties */
 html {
-  color: var(--primary-color);
-  margin: clamp(2rem,16%,8rem);
+  color: var(--bkgd-color);
+  margin: clamp(2rem, 16%, 8rem);
   font-size: 18px;
-  font-family: "Quicksand", system-ui, -apple-system, BlinkMacSystemFont,
-    "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: "Kalam", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
+#date{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
 
 h1 {
-  color: var(--accent-color);
-  font-size: clamp(2.5rem, 5vw + .5rem,5rem);
+  color: var(--primary-color);
+  font-size: clamp(2.5rem, 5vw + 0.5rem, 5rem);
   line-height: 1;
-  font-weight: bold;
+  font-weight: 700;
   margin-bottom: 10px;
+  font-family: "Permanent Marker", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
 h2 {
-    font-size: clamp(1.75rem, 3vw + .5rem,3rem);
+  color: var(--secondary-color);
+  font-size: clamp(1.75rem, 3vw + 0.5rem, 3rem);
+  line-height: 2rem;
 }
 
 body {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
+  color: var(--primary-color);
 }
 
 #map-caption {
-    font-size: clamp(0.75rem, 1vw + .5rem,2rem);
-    margin: 5px auto;
+  font-size: clamp(0.75rem, 1vw + 0.5rem, 2rem);
+  margin: 5px auto;
+  color: var(--secondary-color);
 }
 
 #desc {
-    font-size: clamp(1rem, 1.5vw + .5rem,2.5rem);
+  font-size: clamp(1rem, 1.5vw + 0.5rem, 2.5rem);
+  margin-bottom: 10px;
 }
 
 /*Styling for the images*/
@@ -62,6 +69,8 @@ body {
   height: auto;
   width: 100%;
   border-radius: 8px;
+  box-shadow: 0px 6px 7px #7c757a;
+  margin-bottom: 10px;
 }
 
 /* Set size of Google Map display*/
@@ -71,58 +80,76 @@ body {
   margin-top: 10px;
 }
 
-
 /*Styling for buttons*/
-button {
+button{
   background: transparent;
-  height: 5rem;
-  width: 5rem;
-  color: grey;
-  border-radius: 20px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  transition: transform 0.2s ease;
+  border: none;
+  outline: none;
+}
+
+button:hover{
+  transform: scale(0.96);
+  cursor: pointer;
 }
 
 .btns {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  color: var(--button-color);
+  height: 5rem;
 }
 
-#share-btns{
+#share-btns {
     gap: 10px;
+  }
+
+#heart-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  height: 15vw;
+  width: 15vw;
+  font-size: 1.75rem;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
 }
 
 i {
-  font-size: 3rem;
+  font-size: 10vw;
 }
 
-a:hover,
-button:hover {
-  cursor: pointer;
-}
 
 
 /* Media Query to adjust format of images to 2 columns */
 @media (min-width: 720px) {
-   /*html{
+  /*html{
     margin: clamp(2rem,16%,8rem);
    }*/
 
   .responsive-img {
-    width: 50%;
+    width: 49%;
+  }
+
+  #heart-btn{
+    height: 10vw;
+    width: 10vw;
+  }
+
+  i{
+    font-size: 8vw;
   }
 
   figure {
     display: flex;
-    gap: clamp(10px, 15px, 20px);
     margin: 20px auto;
+    justify-content: space-between;
   }
 }
 
-@media (min-width: 1000px){
-    html{
-
+@media (min-width: 1000px) {
+    h2{
+        line-height: 2.5rem;
     }
 }
