--- a/index.css
+++ b/index.css
@@ -13,7 +13,7 @@
   --bkgd-color: #f5f5f5;
   --primary-color: #2c3e50;
   --secondary-color: #e74c3c;
-  --accent-color: #6c78e0;
+  --accent-color: #d49ec2;
   --heart-color: #dbd3d9;
 }
 
@@ -23,6 +23,7 @@ html {
   margin: clamp(2rem, 16%, 8rem);
   font-size: 18px;
   font-family: "Kalam", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  scroll-behavior: smooth;
 }
 
 #date {
@@ -68,8 +69,6 @@ body {
 .responsive-img {
   height: auto;
   width: 100%;
-  border-radius: 8px;
-  box-shadow: 0px 6px 7px #7c757a;
   margin-bottom: 10px;
 }
 
@@ -98,14 +97,17 @@ button:hover {
   align-items: center;
   justify-content: space-between;
   color: var(--button-color);
+  margin: 0 1vw;
 }
 
 #share-btns {
+  display: flex;
   gap: 10px;
 }
 
 #share-btns i {
   font-size: 10vw;
+  color: var(--accent-color);
 }
 
 #heart-btn {
@@ -126,7 +128,7 @@ button:hover {
 
 /* Media Query to adjust format of images to 2 columns */
 @media (min-width: 720px) {
-  /* Adjust sizes of fa-icons and like button */
+  /* Adjust sizes and of fa-icons and buttons*/
   #heart-btn {
     height: 10vw;
     width: 10vw;
@@ -138,6 +140,14 @@ button:hover {
   #heart-btn i {
     font-size: 5vw;
   }
+
+  #share-btns {
+    gap: 2vw;
+  }
+
+   .btns{
+    margin: 0 2vw;
+   }
 
   /* Display the two images next to each other */
   figure {
