--- a/index.css
+++ b/index.css
@@ -11,10 +11,10 @@
 /*Color Palette*/
 :root {
   --bkgd-color: #f5f5f5;
-  --primary-color: #2c3e50;
-  --secondary-color: #e74c3c;
-  --accent-color: #d49ec2;
-  --heart-color: #dbd3d9;
+  --primary-color: #494e58;
+  --secondary-color: #83442a;
+  --accent-color: #838cbb;
+  --splash-color: #cc8365;
 }
 
 /* Set default color, font-size, and other properties */
@@ -31,6 +31,23 @@ body {
   display: flex;
   flex-direction: column;
   color: var(--primary-color);
+  justify-content: center;
+  align-items: center;
+}
+
+header{
+    display: flex;
+    width: 100vw;
+    height: 100vh;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+header i{
+    margin-top: 5vh;
+    font-size: 5vh;
+    color: var(--primary-color);
 }
 
 h1 {
@@ -38,7 +55,7 @@ h1 {
   font-size: clamp(2.5rem, 5vw + 0.5rem, 5rem);
   line-height: 1;
   font-weight: 700;
-  margin-bottom: 10px;
+  margin-bottom:5vh;
   font-family: "Permanent Marker", "Segoe UI", Tahoma, Geneva, Verdana,
     sans-serif;
 }
@@ -46,13 +63,7 @@ h1 {
 h2 {
   color: var(--secondary-color);
   font-size: clamp(1.75rem, 3vw + 0.5rem, 3rem);
-  line-height: 2rem;
-}
-
-#date {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+  line-height: 2.5rem;
 }
 
 #desc {
@@ -71,11 +82,13 @@ h2 {
 figcaption, #map-caption{
     font-size: clamp(0.75rem, 1vw + 0.5rem, 2rem);
     text-align: center;
+    color: var(--splash-color);
 }
+
 
 /* Styling for map displays*/
 #map {
-  width: 100%;
+  width: 100vw;
   height: 200px;
   margin-top: 10px;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
@@ -84,7 +97,6 @@ figcaption, #map-caption{
 
 #map-caption {
   margin: 5px auto;
-  color: var(--secondary-color);
 }
 
 /*Styling for buttons*/
@@ -92,7 +104,6 @@ button {
   background: transparent;
   transition: transform 0.2s ease;
   border: none;
-  outline: none;
 }
 
 button:hover,
@@ -122,12 +133,6 @@ button:hover,
   font-size: 10vw;
 }
 
-#heart-btn {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
 
 /* Media Query to adjust format of images to 2 columns */
 @media (min-width: 720px) {
@@ -144,6 +149,10 @@ button:hover,
     font-size: 8vw;
   }
 
+  header i{
+    font-size: 8vh;
+}
+
   /* Display the two images next to each other */
   figure {
     display: flex;
@@ -159,6 +168,6 @@ button:hover,
 @media (min-width: 1000px) {
   /* Increase line height of h2 element */
   h2 {
-    line-height: 2.5rem;
+    line-height: 3.5rem;
   }
 }
